# nwt_parse

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml
nwt/: create_database.py  exc.py  main.py
nwt/database/: __init__.py  database.db  fetch.py  get.py  schema.py  schema.sql  sql2dbml.py  views.py
nwt/jw/: __init__.py  base_bible.py  bible_passage.py  epub.py
src/: database.db  exc.py  main.py  utils.py
src/database/: __init__.py  create.py  fetch.py  get.py  schema.dbml  sql2dbml.py
src/jw/: __init__.py  base_bible.py  bible_passage.py  epub.py
