[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nwt_parse"
version = "0.0.9"
authors = [
  { name="vbastianpc", email="vbastianpalavecino@gmail.com" },
]
description = "Parse bible citations and get scripture from NWT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy",
  "Unidecode",
  "requests",
  "mechanicalsoup",
  "beautifulsoup4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Education",
    "Topic :: Religion"
]

[project.urls]
"Homepage" = "https://github.com/vbastianpc/nwt_parse"
"Bug Tracker" = "https://github.com/vbastianpc/nwt_parse/issues"